fixed up pom.xml, updated readme with tutorial